<resources>
    <string name="app_name">Helper</string>
    <string name="logo_descriptor">PBHS Logo</string>
    <string name="district_school">Broward Schools</string>
    <string name="school_name">PBHS Helper</string>
    <string name="grades">Grades</string>
    <string name="login_label">Login to Broward Schools</string>
    <string name="username_hint">Username (06########)</string>
    <string name="password_hint">Password (P##/##/####)</string>
    <string name="submit">Submit</string>
    <string name="calendar">Calendar</string>
    <string name="cal_descriptor">Calendar Image</string>
    <string name="counselor">Counselor</string>
    <string name="title_activity_grades">Grades</string>
    <string name="title_activity_login">Login</string>
    <string name="sign_out"><u>Sign Out</u></string>
    <string name="error_login">Username or Password Was Incorrect</string>
    <string name="title_activity_calender">PBHS Calender</string>
    <string name="title_activity_assignments">Class Assignments</string>
    <string name="null_val" />
    <string name="menu">Menu</string>
    <string name="no_grades_assigned">No assignments have been assigned.</string>
    <string name="teacher">Teacher</string>
    <string name="credts">Created by Jax Hutton</string>
</resources>
